Add '--enable-preview' flag for java execution tasks